# OpenGlTuto

./: CMakeLists.txt  main.cpp  main.h
headers/: EBO.h  VAO.h  VBO.h  shadersClass.h
libraries/include/glad/: glad.h
libraries/include/stb/: stb_image.h
resources/Shader/: default.vert
source/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shadersClass.cpp  stb.cpp
